# LogicSimplifier

./: LICENSE  LogicSimplifier.cabal  LogicSimplifier.hs  README.md  stack.yaml
