name:                LogicSimplifier
version:             0.1
synopsis:            Simplifies logical expressions.
description:         See README.md
homepage:            https://github.com/Purlox/LogicSimplifier
license:             MIT
license-file:        LICENSE
author:              Purlox
maintainer:          purlox@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     LogicSimplifier
  -- other-modules:       
  other-extensions:    GADTSyntax, DeriveFunctor, PatternSynonyms
  build-depends:       base >=4.8 && <4.9, data-fix >=0.0 && <0.1, semigroups >=0.16 && <0.19, pretty >=1.1 && <1.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
